Update styles for selection :city_sunrise:

--- a/themes/artemis/source/scss/_partial/base.scss
+++ b/themes/artemis/source/scss/_partial/base.scss
@@ -1,6 +1,6 @@
-::selection {
-    color: #FFFFFF;
-    background-color: #42b983;
+.post-content *::selection {
+  color: #ffffff;
+  background-color: #fd797b;
 }
 
 html, body {
