--- a/themes/artemis/source/scss/_partial/mq.scss
+++ b/themes/artemis/source/scss/_partial/mq.scss
@@ -18,14 +18,14 @@ main.container {
     }
     header {
         padding: 20px 0;
-        a.logo-link,
+        .branding,
         ul.nav.nav-list {
-            float: none;
-            display: block;
-            text-align: center;
+          float: none;
+          display: block;
+          text-align: center;
         }
         li.nav-list-item {
-            padding: 10px 10px;
+          padding: 10px 10px;
         }
     }
     main.container,
