--- a/themes/artemis/layout/partial/scripts.pug
+++ b/themes/artemis/layout/partial/scripts.pug
@@ -12,13 +12,10 @@ if theme.mathjax
 
 //- Analytics tracking
 if theme.google_analytics
+    script(async, src=`https://www.googletagmanager.com/gtag/js?id=${theme.google_analytics}`)
     script.
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', '#{theme.google_analytics}']);
-        _gaq.push(['_trackPageview']);
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-        (function () {
-            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-        })();
+        gtag('config', '#{theme.google_analytics}');
