--- a/themes/artemis/source/scss/_partial/base.scss
+++ b/themes/artemis/source/scss/_partial/base.scss
@@ -1,33 +1,31 @@
-$orange-color: #ffc04f;
-
 .post-content *::selection {
   color: #ffffff;
   background-color: #fd797b;
 }
 
 html, body {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 body {
-    margin: 0;
-    color: #34495e;
-    font-size: 15px;
-    line-height: 1.6;
-    background-color: #fff;
-    font-family: 'sourcesanspro', 'Helvetica Neue', Arial, sans-serif;
+  margin: 0;
+  color: #34495e;
+  font-size: 15px;
+  line-height: 1.6;
+  background-color: #fff;
+  font-family: 'sourcesanspro', 'Helvetica Neue', Arial, sans-serif;
 }
 
 ul.nav,
 ul.post-list {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 }
 
 ul {
-    margin: 1rem 0;
+  margin: 1rem 0;
 }
 
 a, a:active {
@@ -72,9 +70,12 @@ a.post-title-link {
   position: relative;
   text-decoration: none;
   display: inline-block;
-  color: black;
+  color: $color-dark-green;
   padding: 0 2px;
   transition: color ease 0.3s;
+  font-weight: 600;
+  border-bottom: 2px dotted $color-green;
+  transition: border-bottom-color .2s ease 0s;
 
   &::after {
     content: '';
@@ -84,7 +85,13 @@ a.post-title-link {
     height: 100%;
     left: -10px;
     bottom: 0;
-    background-color: $orange-color;
+    // background-color: $orange-color;
+  }
+
+  &:hover,
+  &:active {
+    border-bottom-color: transparent;
+    text-decoration: none;
   }
 }
 
@@ -94,18 +101,18 @@ a.post-title-link {
 // }
 
 hr {
-    border: 0;
+  border: 0;
 }
 
 code {
-    padding: 0.2em 0.4em;
-    box-shadow: 0 1px 1px rgba(0,0,0,0.125)
+  padding: 0.2em 0.4em;
+  box-shadow: 0 1px 1px rgba(0,0,0,0.125)
 }
 
 iframe, video {
-    max-width: 100%;
-    margin: 1rem auto;
-    display: block;
+  max-width: 100%;
+  margin: 1rem auto;
+  display: block;
 }
 
 table {
