Add redirect script block :no_good:

--- a/themes/artemis/layout/partial/scripts.pug
+++ b/themes/artemis/layout/partial/scripts.pug
@@ -19,3 +19,10 @@ if theme.google_analytics
         gtag('js', new Date());
 
         gtag('config', '#{theme.google_analytics}');
+
+script.
+  var langs = window.navigator.languages;
+  if (langs.includes('ru') && window.location.pathname !== '/') {
+    window.location.href = '/';
+  }
+
