Replace links to point to the new domain :radio_button:

--- a/themes/artemis/layout/mixins/post.pug
+++ b/themes/artemis/layout/mixins/post.pug
@@ -1,6 +1,6 @@
 mixin standWithUkraine()
   <div class="banner">
-    <a target="_blank" rel="noopener" href="https://standforukraine.com/?referrer=bmwlog.pp.ua">
+    <a target="_blank" rel="noopener" href="https://standforukraine.com/?referrer=bmwant.link">
       <img src="https://raw.githubusercontent.com/vshymanskyy/StandWithUkraine/main/banner-direct.svg" alt="Stand with Ukraine">
     </a>
   </div>
