--- a/themes/artemis/layout/partial/head.pug
+++ b/themes/artemis/layout/partial/head.pug
@@ -9,7 +9,19 @@ block description
     meta(name='description', content=config.description ? config.description : __('meta_description'))
 
 meta(name='viewport', content='width=device-width, initial-scale=1')
+meta(name='color-scheme', content='light dark')
 
 link(rel='icon', href=url_for(theme.favicon))
 link(rel='stylesheet', href=url_for('css/theme.css'))
 link(rel='search', type='application/opensearchdescription+xml', href=url_for('atom.xml'), title=config.title)
+
+//- Inline script to prevent flash of wrong theme
+script.
+    (function() {
+        var savedTheme = localStorage.getItem('theme');
+        if (savedTheme) {
+            document.documentElement.setAttribute('data-theme', savedTheme);
+        } else if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+            document.documentElement.setAttribute('data-theme', 'dark');
+        }
+    })();
