--- a/themes/artemis/source/scss/_partial/copyright.scss
+++ b/themes/artemis/source/scss/_partial/copyright.scss
@@ -2,15 +2,15 @@ footer {
     padding-bottom: 1px;
     .copyright {
         margin: 4em 0;
-        border-top: 1px solid #ddd;
+        border-top: 1px solid var(--border-light);
         text-align: center;
         p, a {
-            color: #aaa;
+            color: var(--text-copyright);
             font-size: 14px;
             font-weight: 100;
         }
         a:hover {
-            color: #888;
+            color: var(--text-copyright-hover);
         }
     }
 }
