--- a/themes/artemis/source/scss/_partial/highlight.scss
+++ b/themes/artemis/source/scss/_partial/highlight.scss
@@ -1,7 +1,8 @@
 code,
 pre {
     font-size: 0.8em;
-    background-color: #f8f8f8;
+    background-color: var(--bg-code);
+    color: var(--text-code);
     font-family: $code-font-family;
 }
 
@@ -10,13 +11,14 @@ pre {
     margin: 1em 0;
     border-radius: 2px;
     line-height: 1.1em;
-    background-color: #f8f8f8;
+    background-color: var(--bg-code);
     overflow-x: auto;
     table, tr, td {
         width: 100%;
         border-collapse: collapse;
         padding: 0;
         margin: 0;
+        background-color: var(--bg-code);
     }
     .gutter {
         display: none;
@@ -25,6 +27,7 @@ pre {
         padding: 1.2em 1.4em;
         line-height: 1.5em;
         margin: 0;
+        background-color: var(--bg-code);
         .line {
             width: auto;
             height: 18px;
@@ -36,7 +39,7 @@ pre {
     position: absolute;
     top: 0;
     right: 0;
-    color: #ccc;
+    color: var(--text-code-label);
     text-align: right;
     font-size: 0.75em;
     padding: 5px 10px 0;
@@ -62,17 +65,17 @@ $signs: ("sql", "ini", "conf", "html", "javascript", "js", "bash", "css", "scss"
 }
 
 pre {
-    color: #525252;
+    color: var(--text-code);
 
     .comment,
     .quote {
-        color: #998;
+        color: var(--code-comment);
         font-style: italic
     }
     .keyword,
     .selector-tag,
     .subst {
-        color: #333;
+        color: var(--code-keyword);
         font-weight: bold
     }
     .number,
@@ -80,16 +83,16 @@ pre {
     .variable,
     .template-variable,
     .tag .attr {
-        color: #008080
+        color: var(--code-number)
     }
     .string,
     .doctag {
-        color: #d14
+        color: var(--code-string)
     }
     .title,
     .section,
     .selector-id {
-        color: #900;
+        color: var(--code-title);
         font-weight: bold
     }
     .subst {
@@ -97,36 +100,36 @@ pre {
     }
     .type,
     .class .title {
-        color: #458;
+        color: var(--code-type);
         font-weight: bold
     }
     .tag,
     .name,
     .attribute {
-        color: #000080;
+        color: var(--code-tag);
         font-weight: normal
     }
     .regexp,
     .link {
-        color: #009926
+        color: var(--code-regexp)
     }
     .symbol,
     .bullet {
-        color: #990073
+        color: var(--code-symbol)
     }
     .built_in,
     .builtin-name {
-        color: #0086b3
+        color: var(--code-builtin)
     }
     .meta {
-        color: #999;
+        color: var(--code-meta);
         font-weight: bold
     }
     .deletion {
-        background: #fdd
+        background: var(--code-deletion-bg)
     }
     .addition {
-        background: #dfd
+        background: var(--code-addition-bg)
     }
     .emphasis {
         font-style: italic
