--- a/themes/artemis/source/scss/_partial/base.scss
+++ b/themes/artemis/source/scss/_partial/base.scss
@@ -3,7 +3,8 @@
   background-color: var(--bg-selection);
 }
 
-html, body {
+html,
+body {
   width: 100%;
   height: 100%;
 }
@@ -29,7 +30,8 @@ ul {
   margin: 1rem 0;
 }
 
-a, a:active {
+a,
+a:active {
   color: var(--text-heading);
   text-decoration: none;
 }
@@ -39,7 +41,7 @@ a.nav-list-link {
   text-decoration: none;
   display: inline-block;
   color: var(--text-nav);
-  padding: 0 1px;
+  padding: 6px 1px;
   transition: color ease 0.3s;
 
   &::after {
@@ -112,7 +114,8 @@ code {
   border-radius: 3px;
 }
 
-iframe, video {
+iframe,
+video {
   max-width: 100%;
   margin: 1rem auto;
   display: block;
@@ -120,6 +123,7 @@ iframe, video {
 
 table {
   padding: 0;
+
   th {
     font-weight: bold;
     border: 1px solid var(--border-table);
@@ -127,27 +131,33 @@ table {
     margin: 0;
     padding: 6px 13px;
   }
+
   thead {
     background-color: var(--bg-primary);
   }
+
   tbody {
     tr {
       border-top: 1px solid var(--border-table);
       background-color: var(--bg-primary);
     }
+
     tr:nth-child(2n) {
       background-color: var(--bg-table-stripe);
     }
+
     td {
       border: 1px solid var(--border-table-cell);
       text-align: left;
       margin: 0;
       padding: 6px 13px;
     }
+
     th :first-child,
     td :first-child {
       margin-top: 0;
     }
+
     th :last-child,
     td :last-child {
       margin-bottom: 0;
