--- a/themes/artemis/layout/partial/comment.pug
+++ b/themes/artemis/layout/partial/comment.pug
@@ -13,11 +13,16 @@ if theme.disqus && page.comments
     script(id='dsq-count-scr' src='//#{theme.disqus}.disqus.com/count.js' async)
 
 if theme.comments
-  script(
-    async,
-    src="https://utteranc.es/client.js",
-    repo="bmwant/bmwlog-static",
-    issue-term="pathname",
-    theme="github-light",
-    crossorigin="anonymous"
-  )
+  #utterances-container
+  script.
+    (function() {
+      var theme = document.documentElement.getAttribute('data-theme') === 'dark' ? 'github-dark' : 'github-light';
+      var script = document.createElement('script');
+      script.src = 'https://utteranc.es/client.js';
+      script.setAttribute('repo', 'bmwant/bmwlog-static');
+      script.setAttribute('issue-term', 'pathname');
+      script.setAttribute('theme', theme);
+      script.setAttribute('crossorigin', 'anonymous');
+      script.async = true;
+      document.getElementById('utterances-container').appendChild(script);
+    })();
