--- a/themes/artemis/source/scss/_partial/mq.scss
+++ b/themes/artemis/source/scss/_partial/mq.scss
@@ -1,49 +1,67 @@
 main.container {
-    margin: 2em 10px;
+  margin: 2em 10px;
 }
 
 @media screen and (min-width: 700px) {
-    .wrap {
-        width: 760px;
-        margin: 0 auto;
-    }
-    header {
-        padding: 20px 0;
-    }
+  .wrap {
+    width: 760px;
+    margin: 0 auto;
+  }
+
+  header {
+    padding: 20px 0;
+  }
 }
 
 @media screen and (max-width: 700px) {
-    .wrap {
-        width: 100%;
+  .wrap {
+    width: 100%;
+  }
+
+  header {
+    padding: 20px 0;
+
+    .branding,
+    ul.nav.nav-list {
+      float: none;
+      display: block;
+      text-align: center;
     }
-    header {
-        padding: 20px 0;
-        .branding,
-        ul.nav.nav-list {
-          float: none;
-          display: block;
-          text-align: center;
-        }
-        li.nav-list-item {
-          padding: 10px 10px;
-        }
+
+    li.nav-list-item {
+      padding: 10px 10px;
     }
-    main.container,
-    .home.post-list,
-    .archive {
-        margin-top: 0;
+
+    li.nav-list-item.theme-toggle-item {
+      vertical-align: middle;
+      padding: 0 10px 4px;
     }
-    .archive .post-item {
-        padding-left: 20px;
+  }
+
+  main.container,
+  .home.post-list,
+  .archive {
+    margin-top: 0;
+  }
+
+  .archive .post-item {
+    padding-left: 20px;
+  }
+
+  .post-content {
+
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      max-width: 300px;
+      left: 15px;
     }
-    .post-content {
-        h2, h3, h4, h5, h6 {
-            max-width: 300px;
-            left: 15px;
-        }
-    }
-    .ds-thread,
-    #disqus_thread {
-        margin: 2em 10px;
-    }
+  }
+
+  .ds-thread,
+  #disqus_thread {
+    margin: 2em 10px;
+  }
 }
