--- a/themes/artemis/layout/mixins/post.pug
+++ b/themes/artemis/layout/mixins/post.pug
@@ -19,10 +19,11 @@ mixin postTitle(title)
     else
         != __('untitled')
 
-//- Index Page
+//- Index Page (excludes archived posts)
 mixin posts()
     ul.home.post-list
         - page.posts.each(function (item) {
+            - if (item.archived) return;
             article.home-post-block
                 +postInfo(item)
                 .home-post-title
@@ -32,6 +33,25 @@ mixin posts()
                 //-     != item.excerpt
                 //- a.read-more(href=url_for(item.path))
                 //-     != __('read_more')
+        - })
+
+//- Archived Posts Page (shows only archived posts)
+mixin archivedPosts()
+    - var archivedList = site.posts.filter(function(post) { return post.archived; }).sort('-date');
+    .archive
+        - var year = 0;
+        - var change = false;
+        - archivedList.each(function (item) {
+            - var itemYear = date(item.date, 'YYYY') - 0;
+            - change = year !== itemYear;
+            - year = change ? itemYear : year;
+            if change
+                h2.archive-year
+                    != year
+            .post-item
+                +postInfo(item)
+                a.post-title-link(href=url_for(item.path))
+                    +postTitle(item.title)
         - })
 
 //- Archive Page
